syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";

package greet;

service Sample {
  rpc GetFullName (SampleRequest) returns (SampleResponse);
}

message SampleRequest {
  string firstName = 1;
  string lastName = 2;
}

message SampleResponse {
  string fullName = 1;
}

